fix(#1118): ColorArea fix focus visible state

--- a/packages/@adobe/spectrum-css-temp/components/colorarea/index.css
+++ b/packages/@adobe/spectrum-css-temp/components/colorarea/index.css
@@ -30,12 +30,16 @@
   user-select: none;
 
   &.is-focused,
-  &:focus-within {
+  &.focus-ring {
     z-index: 2;
 
     .spectrum-ColorArea-handle {
       @extend %spectrum-ColorControl-handle--focused;
     }
+  }
+
+  &:focus-within {
+    z-index: 2;
   }
 
   &.is-disabled {
